# zazzle

./: .env.example  .env.prod  .env.prod.example  .gitignore  .pre-commit-config.yaml  Makefile  ORDER_CHECKOUT_FLOW_ANALYSIS.md  PROJECT_SUMMARY.md  README.md  SECURITY_REMEDIATION.md  docker-compose.prod.yml  docker-compose.yml  package-lock.json
.claude/: settings.local.json
backend/: .dockerignore  Dockerfile  Dockerfile.prod  entrypoint.sh  manage.py  pyproject.toml  test_db.sqlite3
backend/apps/cart/: models.py  serializers.py  services.py  urls.py  views.py
backend/apps/cart/migrations/: 0001_initial.py
backend/apps/common/: idempotency.py  logging.py  middleware.py  models.py  permissions.py  tests.py
backend/apps/common/services/: s3.py
backend/apps/designs/: MOCKUP_RENDERING.md  README.md  admin.py  apps.py  models.py  schemas.py  serializers.py  signals.py  tasks.py  tests.py  urls.py  views.py
backend/apps/designs/management/commands/: cleanup_upload_sessions.py  create_sample_drafts.py  generate_sample_mockups.py  install_fonts.py  manage_render_queue.py  test_font_rendering.py  test_s3_config.py  upload_mockup_templates.py
backend/apps/designs/migrations/: 0001_initial.py  0002_mockuprender_productmockuptemplate_and_more.py  0003_alter_draft_editor_state_alter_draft_text_layers_and_more.py  __init__.py
backend/apps/designs/static/designs/fonts/: README.md
backend/apps/designs/static/designs/mockups/: README.md  templates.json
backend/apps/designs/views/: __init__.py  catalog.py  drafts.py  mockups.py  uploads.py
backend/apps/orders/: admin.py  models.py  payment_providers.py  serializers.py  services.py  state.py  tasks.py  tests.py  urls.py  views.py
backend/apps/orders/migrations/: 0001_initial.py  0002_order_indexes_and_payment_unique.py
backend/apps/products/: README.md  admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/products/migrations/: 0001_initial.py  0002_populate_mvp_catalog.py  0003_add_pen_product.py  0003_remove_productvariant_unique_product_variant_and_more.py  0004_merge_20260416_0001.py  0005_alter_producttype_category.py  __init__.py
backend/apps/support/: models.py  serializers.py  tests.py  urls.py  views.py
backend/apps/users/: README.md  admin.py  auth_urls.py  authentication.py  cookies.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
backend/apps/users/migrations/: 0001_initial.py  0002_authentication_system.py  0002_remove_socialconnection_unique_provider_connection_and_more.py  0003_address.py
backend/zazzle/: asgi.py  celery.py  settings.py  settings_test.py  urls.py  wsgi.py
backend/zazzle/settings/: __init__.py  base.py  local.py  prod.py  test.py
docs/: API.md  DEVELOPMENT.md
frontend/: .dockerignore  .env.example  .eslintrc.json  .prettierrc  Dockerfile  Dockerfile.prod  index.html  next.config.js  package-lock.json  package.json  postcss.config.js  tailwind.config.js  trigger_recompile.txt  trigger_recompile2.txt  tsconfig.json  vite.config.ts
frontend-next/: next.config.ts  package-lock.json  package.json
frontend/docs/: API_CODEGEN.md  LIB_RECOVERY.md  SPRINTS.md
frontend/scripts/: generate-mug-assets.mjs
frontend/src/: App.tsx  main.tsx
infra/nginx/: default.conf  nginx.conf
infra/scripts/: backup.sh  deploy.sh  health-check.sh
infra/ssl/: selfsigned.crt  selfsigned.key
test/: package-lock.json  package.json
test/src/: App.tsx  MugViewer.tsx  index.css
(+149 files in other folders)
